--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
     </head>
     <body>
+      <input type="text" id="area51"/>
+      <button class="btn btn-success" id="btnSend" name="btnSend">
+        Send
+    </button>
+      <!-- <button>Click</button> -->
         <script src="build/project.bundle.js" charset="utf-8"></script>
     </body>
 </html>
