--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
       <input type="text" id="area51"/>
       <button class="btn btn-success" id="btnSend" name="btnSend">
-        Send
+        Submit
     </button>
       <!-- <button>Click</button> -->
         <script src="build/project.bundle.js" charset="utf-8"></script>
